# undisorder

./: .gitignore  MANIFEST.in  Makefile  README.md  constraints.txt  pyproject.toml
.github/workflows/: qa.yml
src/undisorder/: __init__.py  __main__.py  audio_metadata.py  cli.py  config.py  geocoder.py  hashdb.py  hasher.py  importer.py  logging.py  metadata.py  musicbrainz.py  organizer.py  scanner.py  selector.py
testing/: README.md  run.sh  setup.sh  verify.sh
tests/: conftest.py  test_audio_metadata.py  test_cli.py  test_config.py  test_geocoder.py  test_hashdb.py  test_hasher.py  test_importer.py  test_metadata.py  test_musicbrainz.py  test_organizer.py  test_scanner.py  test_selector.py
