[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "undisorder"
version = "0.1.0"
description = "Photo/Video/Audio organization tool — deduplicates, sorts by date/topic/artist, and imports into a clean directory structure"
readme = "README.md"
license = "GPL-2.0-only"
requires-python = ">=3.11"
dependencies = [
    "pyexiftool>=0.5",
    "reverse_geocode>=1.0",
    "geopy>=2.4",
    "tqdm>=4.66",
    "mutagen>=1.47",
    "musicbrainzngs>=0.7",
    "pyacoustid>=1.3",
]

[project.optional-dependencies]
dev = [
    "isort",
    "pytest",
    "pytest-cov",
    "ruff",
    "ty",
]

[project.scripts]
undisorder = "undisorder.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["undisorder"]
branch = true

[tool.coverage.report]
show_missing = true
skip_empty = true
exclude_lines = ["pragma: no cover", "if __name__ == .__main__."]

[tool.isort]
profile = "plone"
src_paths = ["src", "tests"]
