[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "undisorder"
version = "1.0.0"
description = "Photo/Video/Audio organization tool — deduplicates, sorts by date/topic/artist, and imports into a clean directory structure"
authors = [
    {name = "Robert Niederreiter", email = "rnix@squarewave.at"},
]
readme = "README.md"
license = "GPL-2.0-only"
requires-python = ">=3.11"
dependencies = [
    "mutagen>=1.47",
    "musicbrainzngs>=0.7",
    "pyacoustid>=1.3",
]

[project.optional-dependencies]
dev = [
    "isort",
    "pytest",
    "pytest-cov",
    "ruff",
    "mypy",
]

[project.scripts]
undisorder = "undisorder.cli:main"

[project.urls]
Homepage = "https://github.com/rnixx/undisorder"
Repository = "https://github.com/rnixx/undisorder"
Issues = "https://github.com/rnixx/undisorder/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["undisorder"]
branch = true

[tool.coverage.report]
show_missing = true
skip_empty = true
exclude_lines = ["pragma: no cover", "if __name__ == .__main__."]

[tool.isort]
profile = "plone"
src_paths = ["src", "tests"]

[[tool.mypy.overrides]]
module = [
    "acoustid.*",
    "musicbrainzngs.*",
]
follow_untyped_imports = true
